--- a/src/app/components/pages/développement-web/développement-web.component.html
+++ b/src/app/components/pages/développement-web/développement-web.component.html
@@ -13,14 +13,14 @@
 <!-- <a class="scrollUp" href="/développement-web">
     <img src="../../../../assets/img/icons/up.png"/>
 </a> -->
-<div id="container" class="galeryBtn">
+<!-- <div id="container" class="galeryBtn">
     <button class="learn-more" routerLink="/galerie">
       <span class="circle" aria-hidden="true">
         <span class="icon arrow"></span>
       </span>
       <span class="button-text"> voir Galerie</span>
     </button>
-</div>
+</div> -->
 <section class="courses-details-area pt-100 pb-70" style="overflow-x:none;">
     <div class="container">
         <div class="courses-details-header">
