--- a/src/app/components/pages/home-page-one/home-page-one.component.html
+++ b/src/app/components/pages/home-page-one/home-page-one.component.html
@@ -26,7 +26,7 @@
         </div>
     </section> -->
 
-    <app-homeone-courses></app-homeone-courses>
+    <!-- <app-homeone-courses></app-homeone-courses> -->
 
     <div class="clients">
         <h3 class="sub-title">Nos clients</h3>
