--- a/src/app/components/pages/production-audiovisuelle/production-audiovisuelle.component.html
+++ b/src/app/components/pages/production-audiovisuelle/production-audiovisuelle.component.html
@@ -111,6 +111,7 @@
                     <!-- <img src="../../../../assets/img/real/bellini.jpg" class="img1"> -->               
                     <figure class="snip1374 img1">
                         <img src="../../../../assets/img/bellini.jpg" alt="sample66" />
+                        <img src="../../../../assets/img/bellini.jpg" alt="Bellini" />
                     </figure>
                     <!-- <figure class="snip1325 hover"><a href="#"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/ls-sample7.jpg" alt="ls-sample7"/></a></figure>
     <figure class="snip1325"><a href="#"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/ls-sample6.jpg" alt="ls-sample6"/></a></figure> -->
