--- a/src/app/components/pages/home-page-one/home-page-one.component.html
+++ b/src/app/components/pages/home-page-one/home-page-one.component.html
@@ -2,8 +2,48 @@
     <app-header-style></app-header-style>
 </div>
 
-<<<<<<< HEAD
-=======
+<div style="overflow-x: hidden;">
+    <div id="banner">
+        <app-homeone-main-banner></app-homeone-main-banner>
+    </div>
+</div>
+    <!-- <a class="scrollUp" href="/événementiel">
+        <img src="../../../../assets/img/icons/up.png"/>
+    </a> -->
+    <div class="sm">
+        <app-common-elements></app-common-elements>
+    </div>
 
+    <div class="about">
+        <app-homeone-about></app-homeone-about>
+    </div>
+    <!-- <section class="funfacts-area pt-100">
+        <div class="container">
+            <div class="funfacts-inner">
+                <app-funfacts></app-funfacts>
+                <div id="particles-js-circle-bubble"></div>
+            </div>
+        </div>
+    </section> -->
 
->>>>>>> d43f9743d899239f68a3f9945d58308ee7bef834
+    <app-homeone-courses></app-homeone-courses>
+
+    <div class="clients">
+        <h3 class="sub-title">Nos clients</h3>
+        <app-clients></app-clients>
+    </div>
+
+    <section class="feedback-area ptb-100">
+        <div class="container">
+            <h3 class="sub-title">Noshhhhh références</h3>
+
+            <app-feedback-style-one></app-feedback-style-one>
+        </div>
+    </section>
+    
+    <div id="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3193.206430339298!2d10.200958614358164!3d36.83753187329892!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12fd4b88474e068d%3A0x2917380f565f81c6!2sIBComProd!5e0!3m2!1sfr!2stn!4v1657899541034!5m2!1sfr!2stn" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+    
+    <app-footer></app-footer>
+
