--- a/src/app/components/pages/home-page-one/home-page-one.component.html
+++ b/src/app/components/pages/home-page-one/home-page-one.component.html
@@ -35,7 +35,7 @@
 
     <!-- <section class="feedback-area ptb-100">
         <div class="container">
-            <h3 class="sub-title">Nos références</h3>
+            <h3 class="sub-title">Nos jjjréférences</h3>
 
             <app-feedback-style-one></app-feedback-style-one>
         </div>
