--- a/src/app/components/pages/home-page-one/home-page-one.component.html
+++ b/src/app/components/pages/home-page-one/home-page-one.component.html
@@ -45,5 +45,5 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3193.206430339298!2d10.200958614358164!3d36.83753187329892!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12fd4b88474e068d%3A0x2917380f565f81c6!2sIBComProd!5e0!3m2!1sfr!2stn!4v1657899541034!5m2!1sfr!2stn" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     
-   
+    <app-footer></app-footer>
 
