--- a/src/app/components/pages/home-page-one/home-page-one.component.html
+++ b/src/app/components/pages/home-page-one/home-page-one.component.html
@@ -29,7 +29,7 @@
     <app-homeone-courses></app-homeone-courses>
 
     <div class="clients">
-        <h3 class="sub-title">Nos clients</h3>
+        <h3 class="sub-title">Nos xcxwccclients</h3>
         <app-clients></app-clients>
     </div>
 
