--- a/src/app/components/pages/événementiel/événementiel.component.scss
+++ b/src/app/components/pages/événementiel/événementiel.component.scss
@@ -109,13 +109,29 @@
     }
 }
 .page-title-area{
-    background-image: url(../../../../assets/img/bg/event2.jpg);
+   // background-image: url(../../../../assets/img/bg/event2.jpg);
     background-size: 100% 550px;
     height: 520px;
     width: 100%;
+    background-color:  rgb(17, 16, 16);
 
+    h2{
+        color: #f1f2f6;
+        margin-top: 50px;
+        font-weight: 700;
+       // font-size: 50px;
+       text-align: center;
+    }
+    p{
+        font-size: 22.5px;
+        margin-top: 5%;
+        //margin-left: 95px;
+        text-align: center;
+        color: rgb(221, 217, 217);
+    }
     .page-title-content{
         margin-top: 30%;
+        
     }
 }
 .galeryBtn{
@@ -129,10 +145,10 @@
     width: 5%;
     
     position: fixed;
-    top: 80%;
+    top: 70%;
     margin-left: 85.7%;
     display: block;
-    margin-bottom: 40%;
+    margin-bottom: 0%;
     margin-top: -7%;
     font-weight: bold;
 }
@@ -266,7 +282,7 @@ button {
     }
 }
 .courses-details-desc1 {
-    margin-top: 30px;
+    margin-top: -190px;
     margin-left: 50px;
     width: 45%;
     display: inline-block;
@@ -304,10 +320,10 @@ button {
             margin-top: 30px;
         }
     }
-    color: #999595;
-    margin-top: 50px;
-    margin-left: 50px;
-    width: 45%;
+    color:#999595;
+    margin-top: 100px;
+    margin-left: 50%;
+    width: 47%;
     display: block;
     .carousel-item{
         width: 75%;
@@ -321,13 +337,6 @@ button {
     }
     
 }
-
-.slides{
-    width: 70%;
-    display: inline-block;
-    margin-left: 40%;
-    margin-top: -70px;
-}
 .courses-details-images1{
     height: 100%;
     width: 50%;
@@ -339,19 +348,30 @@ button {
     }
 }
 .courses-details-images{
-    height: 350px;
+    
     width: 45%;
-    //margin-top: -2600px;
+    margin-top: 0px;
     margin-left: 750px;
-    display: inline-flex;
+    display: inline-block;
     img{
-        margin-top: -60px;
+        width: 90%;
+        margin-top: -1970px;
         border-radius: 30px;
+    }
+    Img{
+        height: 350px;
+
+    }
+    .gt{
+        height: 500px;
+        margin-top: -800px;
+        margin-left: -1250px;
+        
     }
 }
 .why-you-learn{
     margin-top: 3%;
-    margin-left: 0.5%;
+    margin-left: 51.5%;
     ul{
         span{
             color: white;
@@ -376,11 +396,12 @@ button {
         padding-left: 0;
         margin-bottom: 0;
         list-style-type: none;
-        background-color: var(--whiteColor);
+       // background-color: var(--whiteColor);
         box-shadow: 0px 8px 16px 0px rgba(146, 184, 255, 0.2);
         white-space: nowrap;
         margin-top: 19%;
         li {
+           
             border-bottom: 1px dashed #eeeeee;
             color: var(--blackColor);
             overflow: hidden;
@@ -391,18 +412,24 @@ button {
                 weight: 500;
             };
             span {
+                color: white;
                 display: block;
                 width: 170px;
                 text-align: left;
                 float: left;
 
                 i {
-                    color: var(--mainColor);
+                   // color: var(--mainColor);
+                   color: white;
                     position: relative;
                     top: 4px;
                     transition: var(--transition);
                     font-size: 20px;
                     margin-right: 2px;
+                }
+                img{
+                    filter: invert(100%);
+                    -webkit-filter: invert(100%);
                 }
             }
             &:hover {
@@ -625,6 +652,7 @@ $bg: #f3f8fa;
 $white: #fff;
 $black: #282936;
 
+
 @mixin transition($property: all, $duration: 0.45s, $ease: cubic-bezier(0.65,0,.076,1)) {
   transition: $property $duration $ease;
 }
@@ -734,9 +762,9 @@ button {
 @supports (display: grid) {
   body {
     display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 0.625rem;
-  grid-template-areas: ". main main ." ". main main .";
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 0.625rem;
+    grid-template-areas: ". main main ." ". main main .";
   }
   
   #container {
@@ -746,81 +774,10 @@ button {
   }
 }
 
-.has-animation {
-    position: relative;
-    p, img {
-        opacity: 0;
-    }
-    &.animate-in {
-      p, img {
-        animation: textHidden 0.1s 1.1s forwards;
-      }
-      &:before, &:after {
-        content: '';
-        position: absolute;
-        top: 0;
-        right: 0;
-        height: 100%;
-        z-index: 10;
-      }
-      &:before {
-        background-color:white;
-      }
-      &:after {
-        background-color: $black;
-        animation-delay: .7s;
-      }
-    }
-    &.animation-ltr.animate-in {
-      &:before {
-        animation: revealLTR 1.8s ease;
-      }
-      &:after {
-        animation: revealLTR 1s .6s ease;
-      }
-    }
-    &.animation-rtl.animate-in {
-      &:before {
-        animation: revealRTL 1.8s ease;
-      }
-      &:after {
-        animation: revealRTL 1s .6s ease;
-      }
-    }
-  }
-  
-  @keyframes revealRTL {
-    0%{
-      width: 0;
-      right: 0;
-    }
-    65%{
-      width: 100%;
-      right: 0;
-    }
-    100% {
-      width: 0;
-      right: 100%;
-    }
-  }
-  
-  @keyframes revealLTR {
-    0%{
-      width: 0;
-      left: 0;
-    }
-    65%{
-      width: 100%;
-      left: 0;
-    }
-    100% {
-      width: 0;
-      left: 100%;
-    }
-  }
 
 
-  @media only screen and (max-width: 412px){
+
+@media only screen and (max-width: 412px){
     .page-title-area{
         background-image: url(../../../../assets/img/bg/rp.jpg);
         background-size: 100% 100%;
@@ -981,7 +938,7 @@ button {
             // }
         }
      .courses-details-desc1 {
-                margin-top: 35px;
+                margin-top: 5px;
                 width: 95%;
                 margin-left: 0%;
                 display: block;
@@ -1006,7 +963,7 @@ button {
                 } 
         }
     .courses-details-desc2 {
-                margin-top: 75px;
+                margin-top: 35px;
                 width: 95%;
                 margin-left: 0%;
             // display: inline-block;
@@ -1100,8 +1057,6 @@ button {
         margin-left: 2.5%;
     }
   }
-
-  
 @media only screen and (max-width: 767px) {
     
     .courses-details-header {
@@ -1280,7 +1235,7 @@ button {
 
 }
 .contact-form {
-    background-color: var(--whiteColor);
+   // background-color: var(--whiteColor);
     box-shadow: 0px 8px 16px 0px rgba(146, 184, 255, 0.2);
     border-radius: 5px;
     padding: 50px;
@@ -1315,27 +1270,30 @@ button {
         }
     }
     .default-btn {
-        background-color: black;
+        background-color: white;
         border-radius: 30px;
         margin-top: 10px;
-        border-color: black;
+        border-color: white;
         box-shadow: 0 5px 28.5px 1.5px rgba(0, 0, 0, 0.2);
         button{
-            color: white;
+            color: rgb(0, 0, 0);
             font-weight: 700;
             font-size: 16.5px;
+        }
+        i{
+            color: #000000;
         }
 
         &:hover, &:focus {
             box-shadow: 0 5px 28.5px 1.5px rgba(14, 181, 130, 0.2);
-            background-color: rgb(255, 255, 255);
+            background-color: rgb(0, 0, 0);
 
             button{
-                color: black;
+                color: rgb(255, 255, 255);
             }
 
             i{
-                color: black;
+                color: rgb(255, 255, 255);
             }
         }
     }
@@ -1371,173 +1329,177 @@ button {
 		        BEST VIEWED FULLSCREEN
    https://codepen.io/ig_design/full/NWxwBvw
  * ========================================= */
- @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900');
+ .slides{
+    
+    width: 100%;
+    display: inline-block;
+    margin-left: 0px;
+    margin-top: -70px;
 
- body{
-     font-family: 'Poppins', sans-serif;
-     font-weight: 300;
-     font-size: 15px;
-     line-height: 1.7;
-     color: #343434;
-     background-color: #f1f2f6;
-     overflow-x: hidden;
- }
- a {
-     cursor: pointer;
- }
- a:hover {
-     text-decoration: none;
- }
- 
- .section{
-   position: relative;
-   width: 100%;
-   display: block;
- }
- .full-height{
-   min-height: 100vh;
- }
- .over-hide{
-   overflow: hidden;
- }
- .padding-tb{
-   padding: 100px 0;
- }
- [type="radio"]:checked,
- [type="radio"]:not(:checked){
-   position: absolute;
-   left: -9999px;
- }
- .checkbox:checked + label,
- .checkbox:not(:checked) + label{
-   position: relative;
-   cursor: pointer;
-   margin: 0 auto;
-   text-align: center;
-   margin-right: 6px;
-   margin-left: 6px;
-   display: inline-block;
-   width: 50px;
-   height: 50px;
-   border: 3px solid #bdc3c7;
-   background-size: cover;
-   background-position: center;
-   box-sizing: border-box;
-   -webkit-transition: all 0.2s ease;
-   transition: all 0.2s ease;
-   background-image: url('../../../../assets/img/real/soutenance.jpg');
-   animation: border-transform 6s linear infinite alternate forwards;
-     -webkit-animation-play-state: paused;
-     -moz-animation-play-state: paused;
-     animation-play-state: paused;
- }
- .checkbox.scnd + label{
-   background-image: url('../../../../assets/img/real/essec.jpg');
- }
- .checkbox.thrd + label{
-   background-image: url('../../../../assets/img/real/event.jpg');
- }
- .checkbox.foth + label{
-   background-image: url('https://assets.codepen.io/1462889/sl4.jpg');
- }
- 
- .checkbox:checked + label{
-   box-shadow: 0 8px 25px 0 rgba(16,39,112,.3);
-   transform: scale(1.3);
-     -webkit-animation-play-state: running;
-     -moz-animation-play-state: running;
-     animation-play-state: running;
- }
- @keyframes border-transform{
-   0%,100% { border-radius: 63% 37% 54% 46% / 55% 48% 52% 45%; } 
-   14% { border-radius: 40% 60% 54% 46% / 49% 60% 40% 51%; } 
-   28% { border-radius: 54% 46% 38% 62% / 49% 70% 30% 51%; } 
-   42% { border-radius: 61% 39% 55% 45% / 61% 38% 62% 39%; } 
-   56% { border-radius: 61% 39% 67% 33% / 70% 50% 50% 30%; } 
-   70% { border-radius: 50% 50% 34% 66% / 56% 68% 32% 44%; } 
-   84% { border-radius: 46% 54% 50% 50% / 35% 61% 39% 65%; } 
- }
- 
- .slider-height-padding {
-   padding-top: 440px;
- }
- 
- ul {
-   position: absolute;
-   top: 0;
-   left: 0;
-   display: block;
-   width: 100%;
-   z-index: 100;
-   padding: 0;
-   margin: 0;
-   list-style: none;
- }
- ul li {
-   position: absolute;
-   top: 0;
-   left: 0;
-   width: 100%;
-   display: block;
-   z-index: 100;
-   padding: 0;
-   margin: 0;
-   list-style: none;
-   height: 400px;
-   border: 5px solid #bdc3c7;
-   background-size: cover;
-   background-position: center;
-   background-image: url('../../../../assets/img/real/soutenance.jpg');
-   border-radius: 50%;
-   box-sizing: border-box;
-   font-family: 'Poppins', sans-serif;
-   font-weight: 900;
-   font-size: 16px;
-   letter-spacing: 2px;
-   line-height: 2.7;
-   color: #343434;
-   writing-mode: vertical-rl;
-   opacity: 0;
-   pointer-events: none;
-   box-shadow: 0 8px 25px 0 rgba(16,39,112,.1);
-   -webkit-transition: all 0.5s ease;
-   transition: all 0.5s ease;
- }
- ul li span {
-   mix-blend-mode: difference;
- }
- ul li:nth-child(2) {
-   background-image: url('../../../../assets/img/real/essec.jpg');
- }
- ul li:nth-child(3) {
-   background-image: url('../../../../assets/img/real/event.jpg');
- }
- ul li:nth-child(4) {
-   background-image: url('../../../../assets/img/real/laico.jpg');
- }
- 
- 
- .checkbox.frst:checked ~ ul li:nth-child(1) {
-   opacity: 1;
-   pointer-events: auto;
-   border-radius: 16px;
- }
- .checkbox.scnd:checked ~ ul li:nth-child(2) {
-   opacity: 1;
-   pointer-events: auto;
-   border-radius: 16px;
- }
- .checkbox.thrd:checked ~ ul li:nth-child(3) {
-   opacity: 1;
-   pointer-events: auto;
-   border-radius: 16px;
- }
- .checkbox.foth:checked ~ ul li:nth-child(4) {
-   opacity: 1;
-   pointer-events: auto;
-   border-radius: 16px;
- }
- 
+        @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900');
+
+        body{
+            font-family: 'Poppins', sans-serif;
+            font-weight: 300;
+            font-size: 15px;
+            line-height: 1.7;
+            color: #343434;
+            background-color: #f1f2f6;
+            overflow-x: hidden;
+        }
+        a {
+            cursor: pointer;
+        }
+        a:hover {
+            text-decoration: none;
+        }
+        
+        .section{
+        position: relative;
+        width: 100%;
+        display: block;
+        }
+        .full-height{
+        min-height: 100vh;
+        }
+        .over-hide{
+        overflow: hidden;
+        }
+        .padding-tb{
+        padding: 100px 0;
+        }
+        [type="radio"]:checked,
+        [type="radio"]:not(:checked){
+        position: absolute;
+        left: -9999px;
+        }
+        .checkbox:checked + label,
+        .checkbox:not(:checked) + label{
+        position: relative;
+        cursor: pointer;
+        margin: 0 auto;
+        text-align: center;
+        margin-right: 6px;
+        margin-left: 6px;
+        display: inline-block;
+        width: 50px;
+        height: 50px;
+        border: 3px solid #bdc3c7;
+        background-size: cover;
+        background-position: center;
+        box-sizing: border-box;
+        -webkit-transition: all 0.2s ease;
+        transition: all 0.2s ease;
+        background-image: url('../../../../assets/img/real/soutenance.jpg');
+        animation: border-transform 6s linear infinite alternate forwards;
+            -webkit-animation-play-state: paused;
+            -moz-animation-play-state: paused;
+            animation-play-state: paused;
+        }
+        .checkbox.scnd + label{
+        background-image: url('../../../../assets/img/real/essec.jpg');
+        }
+        .checkbox.thrd + label{
+        background-image: url('../../../../assets/img/real/event.jpg');
+        }
+        .checkbox.foth + label{
+        background-image: url('../../../../assets/img/real/medaly.jpg');
+        }
+        
+        .checkbox:checked + label{
+        box-shadow: 0 8px 25px 0 rgba(16,39,112,.3);
+        transform: scale(1.3);
+            -webkit-animation-play-state: running;
+            -moz-animation-play-state: running;
+            animation-play-state: running;
+        }
+        @keyframes border-transform{
+        0%,100% { border-radius: 63% 37% 54% 46% / 55% 48% 52% 45%; } 
+        14% { border-radius: 40% 60% 54% 46% / 49% 60% 40% 51%; } 
+        28% { border-radius: 54% 46% 38% 62% / 49% 70% 30% 51%; } 
+        42% { border-radius: 61% 39% 55% 45% / 61% 38% 62% 39%; } 
+        56% { border-radius: 61% 39% 67% 33% / 70% 50% 50% 30%; } 
+        70% { border-radius: 50% 50% 34% 66% / 56% 68% 32% 44%; } 
+        84% { border-radius: 46% 54% 50% 50% / 35% 61% 39% 65%; } 
+        }
+        
+        .slider-height-padding {
+        padding-top: 440px;
+        }       
+        ul {
+        position: absolute;
+        top: 0;
+        left: 0;
+        display: block;
+        width: 100%;
+        z-index: 100;
+        padding: 0;
+        margin: 0;
+        list-style: none;
+        }
+        ul li {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        display: block;
+        z-index: 100;
+        padding: 0;
+        margin: 0;
+        list-style: none;
+        height: 400px;
+        border: 5px solid #bdc3c7;
+        background-size: cover;
+        background-position: center;
+        background-image: url('../../../../assets/img/real/soutenance.jpg');
+        border-radius: 50%;
+        box-sizing: border-box;
+        font-family: 'Poppins', sans-serif;
+        font-weight: 900;
+        font-size: 16px;
+        letter-spacing: 2px;
+        line-height: 2.7;
+        color: #343434;
+        writing-mode: vertical-rl;
+        opacity: 0;
+        pointer-events: none;
+        box-shadow: 0 8px 25px 0 rgba(16,39,112,.1);
+        -webkit-transition: all 0.5s ease;
+        transition: all 0.5s ease;
+        }
+        ul li span {
+        mix-blend-mode: difference;
+        }
+        ul li:nth-child(2) {
+        background-image: url('../../../../assets/img/real/essec.jpg');
+        }
+        ul li:nth-child(3) {
+        background-image: url('../../../../assets/img/real/event.jpg');
+        }
+        ul li:nth-child(4) {
+        background-image: url('../../../../assets/img/real/medaly.jpg');
+        }
+        .checkbox.frst:checked ~ ul li:nth-child(1) {
+        opacity: 1;
+        pointer-events: auto;
+        border-radius: 16px;
+        }
+        .checkbox.scnd:checked ~ ul li:nth-child(2) {
+        opacity: 1;
+        pointer-events: auto;
+        border-radius: 16px;
+        }
+        .checkbox.thrd:checked ~ ul li:nth-child(3) {
+        opacity: 1;
+        pointer-events: auto;
+        border-radius: 16px;
+        }
+        .checkbox.foth:checked ~ ul li:nth-child(4) {
+        opacity: 1;
+        pointer-events: auto;
+        border-radius: 16px;
+        }
+ }    
  .logo {
      position: absolute;
      top: 30px;
