--- a/src/app/components/pages/relations-presse-et-publiques/relations-presse-et-publiques.component.scss
+++ b/src/app/components/pages/relations-presse-et-publiques/relations-presse-et-publiques.component.scss
@@ -1,7 +1,7 @@
 @import "../home-page-one/homeone-courses/homeone-courses.component.scss";
-.courses-details-area{
-    background-color: black;
-}
+// .courses-details-area{
+//     background-color: black;
+// }
 .courses-details-header {
     margin-bottom: 30px;
     margin-top: -46%;
@@ -112,14 +112,33 @@
     }
 }
 .page-title-area{
-    background-image: url(../../../../assets/img/bg/rp.jpg);
+    //background-image: url(../../../../assets/img/bg/rp.jpg);
     background-size: 100% 100%;
     height: 520px;
     width: 100%;
+    background-color:  rgb(17, 16, 16);
 
     .page-title-content{
         margin-top: 30%;
     }
+
+    
+    h2{
+        color: #f1f2f6;
+        margin-top: 50px;
+        font-weight: 700;
+       // font-size: 50px;
+       text-align: center;
+    }
+    p{
+        font-size: 22.5px;
+        margin-top: 5%;
+        //margin-left: 95px;
+        text-align: center;
+        color: rgb(221, 217, 217);
+    }
+
+    
 }
 .courses-details-image {
     border-radius: 5px;
@@ -131,7 +150,7 @@
 }
 .courses-details-desc1 {
     
-    margin-top: 35px;
+    margin-top: 65px;
     width: 50%;
     margin-left: 50%;
     display: block;
@@ -143,7 +162,7 @@
             weight: 600;
         };
         &:not(first-child) {
-            margin-top: 30px;
+            margin-top: 75px;
         }
     }
     
@@ -255,13 +274,13 @@
         padding-left: 0;
         margin-bottom: 0;
         list-style-type: none;
-        background-color: var(--whiteColor);
+        //background-color: var(--whiteColor);
         box-shadow: 0px 8px 16px 0px rgba(146, 184, 255, 0.2);
         white-space: nowrap;
         margin-top: 15%;
         li {
             border-bottom: 1px dashed #eeeeee;
-            color: var(--blackColor);
+            color: var(--whiteColor);
             overflow: hidden;
             text-align: right;
             padding: 12px 15px;    
@@ -274,9 +293,13 @@
                 width: 170px;
                 text-align: left;
                 float: left;
+                img{
+                    filter: invert(100%);
+                    -webkit-filter: invert(100%);
+                }
 
                 i {
-                    color: var(--mainColor);
+                    color: var(--whiteColor);
                     position: relative;
                     top: 4px;
                     transition: var(--transition);
@@ -499,7 +522,7 @@
     top: 70%;
     margin-left: 85.7%;
     display: block;
-    margin-bottom: 40%;
+    margin-bottom: 0%;
     margin-top: -7%;
     font-weight: bold;
 }
@@ -1319,7 +1342,7 @@ button {
 
 }
 .contact-form {
-    background-color: var(--whiteColor);
+    background-color: rgb(17, 16, 16);
     box-shadow: 0px 8px 16px 0px rgba(146, 184, 255, 0.2);
     border-radius: 5px;
     padding: 50px;
@@ -1354,27 +1377,30 @@ button {
         }
     }
     .default-btn {
-        background-color: black;
+        background-color: white;
         border-radius: 30px;
         margin-top: 10px;
-        border-color: black;
+        border-color: white;
         box-shadow: 0 5px 28.5px 1.5px rgba(0, 0, 0, 0.2);
         button{
-            color: white;
+            color: rgb(0, 0, 0);
             font-weight: 700;
             font-size: 16.5px;
+        }
+        i{
+            color: #000000;
         }
 
         &:hover, &:focus {
             box-shadow: 0 5px 28.5px 1.5px rgba(14, 181, 130, 0.2);
-            background-color: rgb(255, 255, 255);
+            background-color: rgb(0, 0, 0);
 
             button{
-                color: black;
+                color: rgb(255, 255, 255);
             }
 
             i{
-                color: black;
+                color: rgb(255, 255, 255);
             }
         }
     }
@@ -1486,5 +1512,6 @@ button {
     -webkit-transform: scale(1);
     transform: scale(1);
   }
+  
   
   
