--- a/src/app/components/pages/production-audiovisuelle/production-audiovisuelle.component.scss
+++ b/src/app/components/pages/production-audiovisuelle/production-audiovisuelle.component.scss
@@ -109,12 +109,30 @@
     }
 }
 .page-title-area{
-    background-image: url(../../../../assets/img/bg/event1.jpg);
+    //background-image: url(../../../../assets/img/bg/rp.jpg);
     background-size: 100% 100%;
     height: 520px;
     width: 100%;
+    background-color:  rgb(17, 16, 16);
+
     .page-title-content{
         margin-top: 30%;
+    }
+
+    
+    h2{
+        color: #f1f2f6;
+        margin-top: 50px;
+        font-weight: 700;
+       // font-size: 50px;
+       text-align: center;
+    }
+    p{
+        font-size: 22.5px;
+        margin-top: 5%;
+        //margin-left: 95px;
+        text-align: center;
+        color: rgb(221, 217, 217);
     }
 }
 .container-fluid::before{
@@ -133,7 +151,7 @@
 }
 .courses-details-desc1 {
     margin-left: 0%;
-    margin-top: 1%;
+    margin-top: 200px;
     width: 60%;
     display: inline-block;
     h3 {
@@ -205,7 +223,8 @@
 .courses-details-images1{
    
     display: inline-block;
-
+    // width: 1000px;
+    // height: 1000px;
     .img1{
         border-radius: 10%;
         width: 100%;
@@ -227,6 +246,7 @@
         }
     }
 }
+
 .related-courses {
     margin-top: 40px;
 
@@ -240,18 +260,18 @@
 }
 .courses-sidebar-information {
     margin-bottom: 40px;
-
+   // margin-top: -150%;
     ul {
         padding-left: 0;
         margin-bottom: 0;
         list-style-type: none;
-        background-color: var(--whiteColor);
+        //background-color: var(--whiteColor);
         box-shadow: 0px 8px 16px 0px rgba(146, 184, 255, 0.2);
         white-space: nowrap;
-        margin-top:18%;
+        margin-top: 15%;
         li {
             border-bottom: 1px dashed #eeeeee;
-            color: var(--blackColor);
+            color: var(--whiteColor);
             overflow: hidden;
             text-align: right;
             padding: 12px 15px;    
@@ -264,9 +284,13 @@
                 width: 170px;
                 text-align: left;
                 float: left;
+                img{
+                    filter: invert(100%);
+                    -webkit-filter: invert(100%);
+                }
 
                 i {
-                    color: var(--mainColor);
+                    color: var(--whiteColor);
                     position: relative;
                     top: 4px;
                     transition: var(--transition);
@@ -489,18 +513,16 @@
     top: 73%;
     margin-left: 85.7%;
     display: block;
-    margin-bottom: 40%;
+    margin-bottom: 0%;
     margin-top: -7%;
     font-weight: bold;
 }
-
 .courses-details-images{
     margin-left: 650px;
-    margin-top: -18.5%;
+    margin-top: -23.5%;
     border-radius: 30px;
     width: 1100px
 }
-
 
 @import url('https://fonts.googleapis.com/css?family=Mukta:700');
 
@@ -1235,7 +1257,7 @@ button {
 @media only screen and (min-width: 1200px) and (max-width: 1275px) {
 }
 .contact-form {
-    background-color: var(--whiteColor);
+    background-color: rgb(17, 16, 16);
     box-shadow: 0px 8px 16px 0px rgba(146, 184, 255, 0.2);
     border-radius: 5px;
     padding: 50px;
@@ -1270,27 +1292,30 @@ button {
         }
     }
     .default-btn {
-        background-color: black;
+        background-color: white;
         border-radius: 30px;
         margin-top: 10px;
-        border-color: black;
+        border-color: white;
         box-shadow: 0 5px 28.5px 1.5px rgba(0, 0, 0, 0.2);
         button{
-            color: white;
+            color: rgb(0, 0, 0);
             font-weight: 700;
             font-size: 16.5px;
+        }
+        i{
+            color: #000000;
         }
 
         &:hover, &:focus {
             box-shadow: 0 5px 28.5px 1.5px rgba(14, 181, 130, 0.2);
-            background-color: rgb(255, 255, 255);
+            background-color: rgb(0, 0, 0);
 
             button{
-                color: black;
+                color: rgb(255, 255, 255);
             }
 
             i{
-                color: black;
+                color: rgb(255, 255, 255);
             }
         }
     }
