--- a/src/app/components/pages/marketing-digital/marketing-digital.component.scss
+++ b/src/app/components/pages/marketing-digital/marketing-digital.component.scss
@@ -111,24 +111,40 @@
 }
 
 .page-title-area{
-    background-image: url(../../../../assets/img/bg/marketing.jpg);
+    //background-image: url(../../../../assets/img/bg/rp.jpg);
     background-size: 100% 100%;
     height: 520px;
-    width: 1348px;
-
+    width: 100%;
+    background-color:  rgb(17, 16, 16);
     .page-title-content{
         margin-top: 30%;
+    }  
+    h2{
+        color: #f1f2f6;
+        margin-top: 50px;
+        font-weight: 700;
+       // font-size: 50px;
+       text-align: center;
+    }
+    p{
+        font-size: 22.5px;
+        margin-top: 5%;
+        //margin-left: 95px;
+        text-align: center;
+        color: rgb(221, 217, 217);
     }
 }
+
 .courses-details-image {
     border-radius: 5px;
+    margin-top: -500px;
     iframe {
         width: 100%;
         border-radius: 5px;
     }
 }
 .courses-details-desc1 {
-    margin-top: -45px;
+    margin-top: -50px;
     width: 70%;
     margin-bottom: 10%;
     margin-left: -50px;
@@ -233,6 +249,26 @@
     }
 }
 
+.courses-content{
+    div{       
+        color: white;       
+    }
+    h3{
+        color: white;
+    }
+    .why-you-learn{
+        ul{
+            div{
+                li{
+                    span{ color: white;} 
+                 }
+            }
+        }
+    }
+    
+   
+    
+}
 .galeryBtn{
     button{
         border: none;
@@ -246,7 +282,7 @@
     top: 70%;
     margin-left: 85.7%;
     display: block;
-    margin-bottom: 40%;
+    margin-bottom: 0%;
     margin-top: -7%;
     font-weight: bold;
 }
@@ -287,7 +323,11 @@
   }
 
   .shorting{
-    margin-top: -5%
+    margin-top: -5%;
+    #packs{
+        color:rgb(17, 16, 16);
+    }
+    
   }
 @import url('https://fonts.googleapis.com/css?family=Mukta:700');
 
@@ -423,18 +463,18 @@ button {
 }
 .courses-sidebar-information {
     margin-bottom: 40px;
-
+    margin-top: -500px;
     ul {
         padding-left: 0;
         margin-bottom: 0;
         list-style-type: none;
-        background-color: var(--whiteColor);
+        //background-color: var(--whiteColor);
         box-shadow: 0px 8px 16px 0px rgba(146, 184, 255, 0.2);
         white-space: nowrap;
-        margin-top: 19%;
+        margin-top: 15%;
         li {
             border-bottom: 1px dashed #eeeeee;
-            color: var(--blackColor);
+            color: var(--whiteColor);
             overflow: hidden;
             text-align: right;
             padding: 12px 15px;    
@@ -447,9 +487,13 @@ button {
                 width: 170px;
                 text-align: left;
                 float: left;
+                img{
+                    filter: invert(100%);
+                    -webkit-filter: invert(100%);
+                }
 
                 i {
-                    color: var(--mainColor);
+                    color: var(--whiteColor);
                     position: relative;
                     top: 4px;
                     transition: var(--transition);
@@ -861,7 +905,13 @@ button {
   }
 
   .packIcons{
-    margin-left: 35%;
+    margin-top: 25px;
+    margin-left: 20%;
+    img{
+        filter: invert(100%);
+        -webkit-filter: invert(100%);
+    }
+
   }
 
 
@@ -913,11 +963,14 @@ button {
         }
     }
     .courses-details-desc {
+       
         h3 {
             font-size: 18px;
         }
         .why-you-learn {
+            
             ul {
+                
                 li {
                     flex: 0 0 100%;
                     max-width: 100%;
@@ -955,6 +1008,7 @@ button {
         .courses-accordion {
             .accordion {
                 .accordion-item {
+                    
                     .accordion-title {
                         padding: 13px 40px 13px 15px;
                         font-size: 14px;
@@ -1045,7 +1099,7 @@ button {
 }
 
 .contact-form {
-    background-color: var(--whiteColor);
+    background-color: rgb(17, 16, 16);
     box-shadow: 0px 8px 16px 0px rgba(146, 184, 255, 0.2);
     border-radius: 5px;
     padding: 50px;
@@ -1080,27 +1134,30 @@ button {
         }
     }
     .default-btn {
-        background-color: black;
+        background-color: white;
         border-radius: 30px;
         margin-top: 10px;
-        border-color: black;
+        border-color: white;
         box-shadow: 0 5px 28.5px 1.5px rgba(0, 0, 0, 0.2);
         button{
-            color: white;
+            color: rgb(0, 0, 0);
             font-weight: 700;
             font-size: 16.5px;
+        }
+        i{
+            color: #000000;
         }
 
         &:hover, &:focus {
             box-shadow: 0 5px 28.5px 1.5px rgba(14, 181, 130, 0.2);
-            background-color: rgb(255, 255, 255);
+            background-color: rgb(0, 0, 0);
 
             button{
-                color: black;
+                color: rgb(255, 255, 255);
             }
 
             i{
-                color: black;
+                color: rgb(255, 255, 255);
             }
         }
     }
