--- a/src/app/components/pages/design-graphique/design-graphique.component.scss
+++ b/src/app/components/pages/design-graphique/design-graphique.component.scss
@@ -114,10 +114,26 @@
     }
 }
 .page-title-area{
-    background-image: url(../../../../assets/img/bg/design.jpg);
+   // background-image: url(../../../../assets/img/bg/design.jpg);
     background-size: 100% 100%;
     height: 520px;
     width: 1347.5px;
+    background-color:  rgb(17, 16, 16);
+
+    h2{
+        color: #f1f2f6;
+        margin-top: 50px;
+        font-weight: 700;
+       // font-size: 50px;
+       text-align: center;
+    }
+    p{
+        font-size: 22.5px;
+        margin-top: 5%;
+        //margin-left: 95px;
+        text-align: center;
+        color: rgb(221, 217, 217);
+    }
 
     .page-title-content{
         margin-top: 30%;
@@ -126,6 +142,7 @@
 .courses-details-image {
     border-radius: 5px;
     margin-bottom: 20px;
+    margin-top: -500px;
     iframe {
         width: 100%;
         border-radius: 5px;
@@ -134,7 +151,9 @@
 .courses-details-desc{  
     width: 38%;
     display: inline-block;
+    margin-top: 300px;
     h3 {
+        margin-top: -100px;
         margin-bottom: 15px;       
         color: #fff;
         font: {
@@ -183,7 +202,7 @@
     display:inline-block;
     margin-left: 102px;  
     width: 45%;
-    margin-top: 0px;
+    margin-top: 100px;
     margin-bottom: 100px;
    img{
     width:100%;
@@ -193,7 +212,36 @@
    }
 }
 .shorting{
-    margin-top: 8%;
+    margin-top: 100px;
+    margin-left: 20px;
+    margin-bottom: 5%;
+    color: white;
+    .courses-title{
+        margin-bottom: 50px;
+        margin-left: -40px;
+        h2{          
+            color: white;
+        }
+        
+    }
+
+    .courses-content{
+        width: 900px;
+        h3 {
+            color: #eeeeee;
+        }
+
+        .courses-details-desc{
+            ul{
+                li{
+                    span{
+                        color: #eeeeee;
+                        font-size: 17.5px;
+                    }
+                }
+            }
+        }
+    }
 }
 .courses-details-titre{
     margin-left: 59.5%;
@@ -237,18 +285,20 @@
 }
 .courses-sidebar-information {
     margin-bottom: 35px;
+    margin-top: -500px;
     width: 120%;
     ul {
         padding-left: 0;
         margin-bottom: 0;
         list-style-type: none;
-        background-color: var(--whiteColor);
+        //background-color: var(--whiteColor);
         box-shadow: 0px 8px 16px 0px rgba(146, 184, 255, 0.2);
         white-space:nowrap;
         margin-top: 7%;
         li {
+           
             border-bottom: 1px dashed #eeeeee;
-            color: var(--blackColor);
+            color: var(--whiteColor);
             overflow: hidden;
             text-align: right;
             padding: 12px 15px;    
@@ -270,6 +320,10 @@
                     font-size: 20px;
                     margin-right: 2px;
                 }
+            }
+            img{
+                filter: invert(100%);
+                -webkit-filter: invert(100%);
             }
             &:hover {
                 span {
@@ -487,7 +541,7 @@
     top: 70%;
     margin-left: 85.7%;
     display: block;
-    margin-bottom: 40%;
+    margin-bottom: 0%;
     margin-top: -7%;
     font-weight: bold;
 }
@@ -799,7 +853,7 @@ button {
 
 }
 .contact-form {
-    background-color: var(--whiteColor);
+    background-color: rgb(17, 16, 16);
     box-shadow: 0px 8px 16px 0px rgba(146, 184, 255, 0.2);
     border-radius: 5px;
     padding: 50px;
@@ -834,27 +888,30 @@ button {
         }
     }
     .default-btn {
-        background-color: black;
+        background-color: white;
         border-radius: 30px;
         margin-top: 10px;
-        border-color: black;
+        border-color: white;
         box-shadow: 0 5px 28.5px 1.5px rgba(0, 0, 0, 0.2);
         button{
-            color: white;
+            color: rgb(0, 0, 0);
             font-weight: 700;
             font-size: 16.5px;
+        }
+        i{
+            color: #000000;
         }
 
         &:hover, &:focus {
             box-shadow: 0 5px 28.5px 1.5px rgba(14, 181, 130, 0.2);
-            background-color: rgb(255, 255, 255);
+            background-color: rgb(0, 0, 0);
 
             button{
-                color: black;
+                color: rgb(255, 255, 255);
             }
 
             i{
-                color: black;
+                color: rgb(255, 255, 255);
             }
         }
     }
@@ -942,16 +999,24 @@ button {
 
 }
 .courses-details-desc {
-    margin-top: 35px;
+    margin-top: -135px;
 
     h3 {
         margin-bottom: 15px;
+        color: #fff;
         font: {
             size: 22px;
             weight: 600;
         };
         &:not(first-child) {
-            margin-top: 30px;
+            margin-top: 10px;
+        }
+    }
+    
+    p {
+        color: #727695;
+        strong {
+            color: white;
         }
     }
     .why-you-learn {
@@ -1556,8 +1621,17 @@ button {
     }
   }
 
-.icon{
+.packIcons{
     margin-left: 75px;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    img{
+        filter: invert(100%);
+        -webkit-filter: invert(100%);
+    }
+}
+#ad{
+    margin-bottom: -0.5%;
 }
 .image{
     margin-top: -50%;
@@ -1630,8 +1704,8 @@ button {
             }
           
         }
-     .courses-details-desc1 {
-                margin-top: 5px;
+     .courses-details-desc {
+                margin-top: 105px;
                 width: 35%;
                 margin-left: 0%;
                 display: block;
