--- a/src/app/components/common/header-style/header-style.component.scss
+++ b/src/app/components/common/header-style/header-style.component.scss
@@ -1,7 +1,7 @@
 .header {
     background-color: #12141b;
     height: 100px;
-    opacity: 0.4;
+    //opacity: 0.4;
     li{
         opacity: 2;
     }
