--- a/src/app/components/pages/clients/clients.component.html
+++ b/src/app/components/pages/clients/clients.component.html
@@ -28,7 +28,7 @@
 </div> -->
 
 
-<!-- <h3>Plus de 400 clients, Grands comptes, ETI, PME et Start-up nous font confiance:</h3>
+<h3>Plus de 400 clients, Grands comptes, ETI, PME et Start-up nous font confiance:</h3>
 
 <div class="slides">
   <abbr class='client' title="OOREDOO"><img src="../../../../assets/img/clients/OOREDOO-IbComProd.png" alt="OOREDOO"></abbr>
@@ -39,10 +39,10 @@
   <abbr class='client' title="Qatar National Bank"><img src="../../../../assets/img/clients/QNB-IbComProd.png" alt="Qatar National Bank"></abbr>
   <abbr class='client' title="TotalEnergies "><img src="../../../../assets/img/clients/TE-IbComProd.png" alt="TotalEnergies"></abbr>
   <abbr class='client' title="Peugeot"><img src="../../../../assets/img/clients/PEUGEOT-IbComProd.png" alt="Peugeot"></abbr>
-</div> -->
+</div>
 
 
-<ul id="c"> 
+<!-- <ul id="c"> 
 		
   <li><p><strong>1</strong></p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></li>
   <li><p><strong>2</strong></p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></li>
@@ -59,4 +59,4 @@
   <li><p><strong>11</strong></p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></li>
   <li><p><strong>12</strong></p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></li> 
 
-</ul>
+</ul> -->
