--- a/src/app/components/common/header-style/header-style.component.scss
+++ b/src/app/components/common/header-style/header-style.component.scss
@@ -1,5 +1,6 @@
 .header {
-    background-color: #12141b;
+   // background-color: #12141b;
+   background-color:   rgb(17, 16, 16);;
     height: 100px;
     //opacity: 0.4;
     li{
@@ -16,7 +17,7 @@
 .logo{
     width: 5.5%;
     margin-top: -50px;
-    margin-left: 50px;
+    margin-left: 75px;
 
 }
 
