--- a/src/app/components/pages/clients/clients.component.html
+++ b/src/app/components/pages/clients/clients.component.html
@@ -28,17 +28,17 @@
 </div> -->
 
 
-<h3>Plus de 400 clients, Grands comptes, ETI, PME et Start-up nous font confiance:</h3>
+<!-- <h3>Plus de 400 clients, Grands comptes, ETI, PME et Start-up nous font confiance:</h3> -->
 
 <div class="slides">
+  <abbr class='client' title="Arab Tunisian Bank"><img src="../../../../assets/img/clients/ATB.png" alt="Arab Tunisian Bank"></abbr>
+  <abbr class='client' title="TotalEnergies "><img src="../../../../assets/img/clients/TE-IbComProd.png" alt="TotalEnergies"></abbr>
+  <abbr class='client' class='client' title="Magasin Général"><img src="../../../../assets/img/clients/MG-IbComProd.png" alt="Magasin Général"></abbr>
   <abbr class='client' title="OOREDOO"><img src="../../../../assets/img/clients/OOREDOO-IbComProd.png" alt="OOREDOO"></abbr>
   <abbr class='client' title="Université Centrale"><img src="../../../../assets/img/clients/UC-IbComProd.png" alt="Université Centrale"></abbr>
-  <abbr class='client' class='client' title="Magasin Général"><img src="../../../../assets/img/clients/MG-IbComProd.png" alt="Magasin Général"></abbr>
-  <abbr class='client' title="Arab Tunisian Bank"><img src="../../../../assets/img/clients/ATB-IbComProd.png" alt="Arab Tunisian Bank"></abbr>
   <abbr class='client' title="Nouvelair"><img src="../../../../assets/img/clients/NA-IbComProd.png" alt="Nouvelair"></abbr>
-  <abbr class='client' title="Qatar National Bank"><img src="../../../../assets/img/clients/QNB-IbComProd.png" alt="Qatar National Bank"></abbr>
-  <abbr class='client' title="TotalEnergies "><img src="../../../../assets/img/clients/TE-IbComProd.png" alt="TotalEnergies"></abbr>
   <abbr class='client' title="Peugeot"><img src="../../../../assets/img/clients/PEUGEOT-IbComProd.png" alt="Peugeot"></abbr>
+  <abbr class='client' title="Qatar National Bank"><img src="../../../../assets/img/clients/QNB-IbComProd.png" alt="Qatar National Bank"></abbr>
 </div>
 
 
