--- a/src/app/components/pages/clients/clients.component.scss
+++ b/src/app/components/pages/clients/clients.component.scss
@@ -132,7 +132,7 @@
   width: 25%;
   img{
     width: 12.5%;
-    opacity: 0.7;
+    //opacity: 0.7;
   }
  }
 
@@ -188,3 +188,6 @@
     line-height: 100px; 
 	}
  
+  .slides{
+    margin-left: -0px;
+  }
