--- a/src/app/components/pages/contact-page/contact-page.component.html
+++ b/src/app/components/pages/contact-page/contact-page.component.html
@@ -1,136 +1,137 @@
 <app-header-style></app-header-style>
 
+<div style="background-color:  rgb(17, 16, 16);">
 
-<div class="page-title-area item-bg1 jarallax" data-jarallax='{"speed": 0.3}'>
-    <div class="container">
-        <div class="page-title-content">
-            <ul>
-                <li><a href="index.html">Acceuil</a></li>
-                <li>Contact</li>
-            </ul>
-            <h2>Nous Contacter</h2>
-        </div>
-    </div>
-</div>
-
-<div id="container" class="galeryBtn">
-    <button class="learn-more" routerLink="/galerie">
-      <span class="circle" aria-hidden="true">
-        <span class="icon arrow"></span>
-      </span>
-      <span class="button-text"> voir Galerie</span>
-    </button>
-</div>
-
-<section class="contact-info-area pt-100 pb-70">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-4 col-md-6 col-sm-6">
-                <div class="contact-info-box mb-30">
-                    <div class="icon">
-                        <i class='bx bx-envelope'></i>
-                    </div>
-                    <h3>Email</h3>
-                    <p><a href="mailto:contact@ibcomprod.com">contact@ibcomprod.com</a></p>
-
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 col-sm-6">
-                <div class="contact-info-box mb-30">
-                    <div class="icon">
-                        <i class='bx bx-map'></i>
-                    </div>
-                    <h3>Localisation</h3>
-                    <p><a href="https://goo.gl/maps/mpNKu4yYyu5fHTaz7" target="_blank">28, Rue 8600 Z.I. La Charguia I 2035, Site archéologique de Carthage، 1 2035</a></p>
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 col-sm-6 offset-lg-0 offset-md-3 offset-sm-3">
-                <div class="contact-info-box mb-30">
-                    <div class="icon">
-                        <i class='bx bx-phone-call'></i>
-                    </div>
-                    <h3>Téléphone</h3>
-                    <p><a href="tel:+216 95 777 154">+216 95 777 154</a></p>
-                    <p><a href="tel:+216 31 196 056">+216 31 196 056</a></p>
-                </div>
+    <div class="page-title-area jarallax" data-jarallax='{"speed": 0.3}'>
+        <div class="container">
+            <div class="page-title-content">
+                <!-- <ul>
+                    <li><a href="index.html">Acceuil</a></li>
+                    <li>Contact</li>
+                </ul> -->
+                <h2>Nous Contacter</h2>
             </div>
         </div>
     </div>
 
-    <div id="particles-js-circle-bubble-2"></div>
-</section>
-
-<section class="contact-area pb-100">
-    <div class="container">
-        <div class="section-title">
-            <span class="sub-title"><strong>Demande de devis</strong></span>
-            <h4>Maintenant parlons de votre projet !</h4>
-
-        </div>
-
-        <div class="contact-form">
-            <form id="contactForm">
-                <div class="row">
-                    <div class="col-lg-6 col-md-12">
-                        <div class="form-group">
-                            <input required type="text" name="nom" id="nom" class="form-control" placeholder="Nom*">
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6 col-md-12">
-                        <div class="form-group">
-                            <input required type="text" name="prenom" id="prenom" class="form-control" placeholder="Prénom*">
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6 col-md-12">
-                        <div class="form-group">
-                            <input required type="email" name="email" id="email" class="form-control" placeholder="Email*">
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6 col-md-12">
-                        <div class="form-group">
-                            <input required type="text" name="phone_number" id="phone_number" class="form-control" placeholder="Téléphone*">
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6 col-md-12">
-                        <div class="form-group">
-                            <input required type="text" name="nomEntreprise" id="nomEntreprise" class="form-control" placeholder="Nom de l'entreprise">
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6 col-md-12">
-                        <div class="form-group">
-                            <input required type="text" name="secteur" id="secteur" class="form-control" placeholder="Secteur">
-                        </div>
-                    </div>
-
-                    <div class="col-lg-12 col-md-12">
-                        <div class="form-group">
-                            <textarea required name="message" class="form-control" id="message" cols="30" rows="5" placeholder="Demande*"></textarea>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-12 col-md-12">
-                        <span class="default-btn"><i class='bx bx-paper-plane icon-arrow before'></i><button class="label" type="submit">Envoyer</button><i class="bx bx-paper-plane icon-arrow after"></i></span>
-                        <span id="import" type="button" class="default-btn"><i style="margin-top: -6px;" class="icon-arrow before"><img src="../../../../assets/img/icons/before.png"></i><button class="label" type="reset">Annuler</button><i class="after"><img src="../../../../assets/img/icons/after.png"></i></span>                    </div>
-                </div>
-            </form>
-        </div>
+    <div id="container" class="galeryBtn">
+        <button class="learn-more" routerLink="/galerie">
+        <span class="circle" aria-hidden="true">
+            <span class="icon arrow"></span>
+        </span>
+        <span class="button-text"> voir Galerie</span>
+        </button>
     </div>
 
-    <div id="particles-js-circle-bubble-3"></div>
-    <div class="contact-bg-image"><img src="assets/img/map.png" alt="image"></div>
+    <section class="contact-info-area pt-100 pb-70">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="contact-info-box mb-30">
+                        <div class="icon">
+                            <i class='bx bx-envelope'></i>
+                        </div>
+                        <h3>Email</h3>
+                        <p><a href="mailto:contact@ibcomprod.com">contact@ibcomprod.com</a></p>
+
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="contact-info-box mb-30">
+                        <div class="icon">
+                            <i class='bx bx-map'></i>
+                        </div>
+                        <h3>Localisation</h3>
+                        <p><a href="https://goo.gl/maps/mpNKu4yYyu5fHTaz7" target="_blank">28, Rue 8600 Z.I. La Charguia I 2035, Site archéologique de Carthage، 1 2035</a></p>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 col-sm-6 offset-lg-0 offset-md-3 offset-sm-3">
+                    <div class="contact-info-box mb-30">
+                        <div class="icon">
+                            <i class='bx bx-phone-call'></i>
+                        </div>
+                        <h3>Téléphone</h3>
+                        <p><a href="tel:+216 95 777 154">+216 95 777 154</a></p>
+                        <p><a href="tel:+216 31 196 056">+216 31 196 056</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="particles-js-circle-bubble-2"></div>
+    </section>
+
+    <section class="contact-area pb-100">
+        <div class="container">
+            <div class="section-title">
+                <span class="sub-title"><strong>Demande de devis</strong></span>
+                <h4 style="color: aliceblue;">Maintenant parlons de votre projet !</h4>
+            </div>
+
+            <div class="contact-form">
+                    <form id="contactForm">
+                        <div class="row">
+                            <div class="col-lg-6 col-md-12">
+                                <div class="form-group">
+                                    <input required type="text" name="nom" id="nom" class="form-control" placeholder="Nom*">
+                                </div>
+                            </div>
+
+                            <div class="col-lg-6 col-md-12">
+                                <div class="form-group">
+                                    <input required type="text" name="prenom" id="prenom" class="form-control" placeholder="Prénom*">
+                                </div>
+                            </div>
+
+                            <div class="col-lg-6 col-md-12">
+                                <div class="form-group">
+                                    <input required type="email" name="email" id="email" class="form-control" placeholder="Email*">
+                                </div>
+                            </div>
+
+                            <div class="col-lg-6 col-md-12">
+                                <div class="form-group">
+                                    <input required type="text" name="phone_number" id="phone_number" class="form-control" placeholder="Téléphone*">
+                                </div>
+                            </div>
+
+                            <div class="col-lg-6 col-md-12">
+                                <div class="form-group">
+                                    <input required type="text" name="nomEntreprise" id="nomEntreprise" class="form-control" placeholder="Nom de l'entreprise">
+                                </div>
+                            </div>
+
+                            <div class="col-lg-6 col-md-12">
+                                <div class="form-group">
+                                    <input required type="text" name="secteur" id="secteur" class="form-control" placeholder="Secteur">
+                                </div>
+                            </div>
+
+                            <div class="col-lg-12 col-md-12">
+                                <div class="form-group">
+                                    <textarea required name="message" class="form-control" id="message" cols="30" rows="5" placeholder="Demande*"></textarea>
+                                </div>
+                            </div>
+
+                            <div class="col-lg-12 col-md-12">
+                                <span class="default-btn"><i class='bx bx-paper-plane icon-arrow before'></i><button class="label" type="submit">Envoyer</button><i class="bx bx-paper-plane icon-arrow after"></i></span>
+                                <span id="import" type="button" class="default-btn"><i style="margin-top: -6px;" class="icon-arrow before"><img src="../../../../assets/img/icons/after.png"></i><button class="label" type="reset">Annuler</button><i class="after"><img src="../../../../assets/img/icons/before.png" style="margin-top: -0px;"></i></span>
+                            </div>
+                        </div>
+                    </form>
+            </div>
+        </div>
+
+        <div id="particles-js-circle-bubble-3"></div>
+        <div class="contact-bg-image"><img src="assets/img/map.png" alt="image"></div>
 
 
-</section>
+    </section>
 
-<div id="map">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3193.206430339298!2d10.200958614358164!3d36.83753187329892!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12fd4b88474e068d%3A0x2917380f565f81c6!2sIBComProd!5e0!3m2!1sfr!2stn!4v1657899541034!5m2!1sfr!2stn" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <div id="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3193.206430339298!2d10.200958614358164!3d36.83753187329892!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12fd4b88474e068d%3A0x2917380f565f81c6!2sIBComProd!5e0!3m2!1sfr!2stn!4v1657899541034!5m2!1sfr!2stn" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
 </div>
-
 <app-footer></app-footer>
