--- a/src/app/components/pages/design-graphique/design-graphique.component.scss
+++ b/src/app/components/pages/design-graphique/design-graphique.component.scss
@@ -16,6 +16,17 @@
             };
         }
     }
+    h2 { 
+        margin-top: -5%;
+        margin-bottom: 2%;
+        margin-left: auto;
+        margin-right: auto;
+        
+        font: {
+            size: 29px;
+            weight: 700;
+        };
+    }
     .courses-meta {
         margin-top: 20px;
 
