--- a/src/app/components/pages/home-page-one/homeone-courses/homeone-courses.component.scss
+++ b/src/app/components/pages/home-page-one/homeone-courses/homeone-courses.component.scss
@@ -174,7 +174,7 @@
 .sub-title {
     text-transform: uppercase;
     display: block;
-    color: var(--mainColor);
+    color:white;
     font-weight: 500;
     margin-bottom: 30px;
     font-size: 25px;
