--- a/src/app/components/pages/home-page-one/homeone-main-banner/homeone-main-banner.component.html
+++ b/src/app/components/pages/home-page-one/homeone-main-banner/homeone-main-banner.component.html
@@ -79,14 +79,15 @@
         </div>
     </div>
     <div class="gallery-area pt-100 pb-20" >
-
+        <div id="video-background">
+            <div class="video-foreground">
+                <iframe src="https://www.youtube.com/embed/sc8T7k6MQ8U?autoplay=1&controls=0&loop=1" title="YouTube video player" frameborder="0" allowfullscreen ></iframe>
+            </div>
+        </div>
+        
         <div class="container">
             <div class="row">
-                <!-- <video width="100%" height="648px" autoplay loop>
-                    <source src="../../../../../assets/video/first.mp4" type="video/mp4">
-                    
-                  Your browser does not support the video tag.
-                  </video> -->
+                
                 <div class="col-lg-3 col-md-2 col-sm-6">
                         <div class="single-gallery-item mb-10">
                             <div class="video" *ngIf="isVideoWeb">
@@ -94,7 +95,7 @@
                                 <p id="titre">Partenaire njehek AAC</p>
                             </div>
                             <div class="video" *ngIf="!isVideoWeb">
-                                <iframe src="https://www.youtube.com/embed/bpe0oVjlwIU" allow="fullscreen" ></iframe>
+                                <iframe src="https://www.youtube.com/embed/bpe0oVjlwIU?controls=0" allow="fullscreen" ></iframe>
                             </div>
                             <!-- <iframe src="https://www.youtube.com/embed/bpe0oVjlwIU" allow="fullscreen" ></iframe> -->
 
@@ -108,7 +109,7 @@
                                 <p id="titre" >Partenaire Njehek UC droit</p>
                             </div>
                             <div class="video" *ngIf="!isVideoWeb">
-                                <iframe src="https://www.youtube.com/embed/E6DQqj2bhKs" allow="fullscreen"></iframe>
+                                <iframe src="https://www.youtube.com/embed/E6DQqj2bhKs?controls=0" allow="fullscreen"></iframe>
                             </div>
                             <!-- <iframe src="https://www.youtube.com/embed/E6DQqj2bhKs" allow="fullscreen"></iframe> -->
                         </div>
@@ -121,7 +122,7 @@
                                 <p id="titre" style="margin-left: -170px;">ATB</p>
                             </div>
                             <div class="video" *ngIf="!isVideoWeb">
-                                <iframe src="https://www.youtube.com/embed/JGT7_jtbgd4" allow="fullscreen"></iframe>
+                                <iframe src="https://www.youtube.com/embed/JGT7_jtbgd4?controls=0" allow="fullscreen"></iframe>
                             </div>
                             <!-- <iframe src="https://www.youtube.com/embed/JGT7_jtbgd4" allow="fullscreen"></iframe> -->
                         </div>
@@ -134,7 +135,7 @@
                                 <p id="titre" >Partenaire Njehek UC</p>
                             </div>
                             <div class="video" *ngIf="!isVideoWeb">
-                                <iframe src="https://www.youtube.com/embed/byRG4LZj440" allow="fullscreen"></iframe>
+                                <iframe src="https://www.youtube.com/embed/byRG4LZj440?controls=0" allow="fullscreen"></iframe>
                             </div>
                             <!-- <iframe src="https://www.youtube.com/embed/byRG4LZj440" allow="fullscreen"></iframe> -->
                         </div>
@@ -147,7 +148,7 @@
                                 <p id="titre">Directeur général Sartorius</p>
                             </div>
                             <div class="video" *ngIf="!isVideoWeb">
-                                <iframe src="https://www.youtube.com/embed/ltGIRfBx520" allow="fullscreen"></iframe>
+                                <iframe src="https://www.youtube.com/embed/ltGIRfBx520?controls=0" allow="fullscreen"></iframe>
                             </div>
                             <!-- <iframe src="https://www.youtube.com/embed/ltGIRfBx520" allow="fullscreen" ></iframe> -->
                         </div>
@@ -160,7 +161,7 @@
                                 <p id="titre">QNB rend hommage à <br> &nbsp;&nbsp;&nbsp;&nbsp; Lamia Hakim</p>
                             </div>
                             <div class="video" *ngIf="!isVideoWeb">
-                                <iframe src="https://www.youtube.com/embed/6zlAly7bTsE" allow="fullscreen" ></iframe>
+                                <iframe src="https://www.youtube.com/embed/6zlAly7bTsE?controls=0" allow="fullscreen" ></iframe>
                             </div>
                             <!-- <iframe src="https://www.youtube.com/embed/6zlAly7bTsE" allow="fullscreen"></iframe> -->
                         </div>
@@ -173,7 +174,7 @@
                                 <p id="titre" >Alliance Groupe Movie</p>
                             </div>
                             <div class="video" *ngIf="!isVideoWeb">
-                                <iframe src="https://www.youtube.com/embed/qJHYtn4xu28" allow="fullscreen" ></iframe>
+                                <iframe src="https://www.youtube.com/embed/qJHYtn4xu28?controls=0" allow="fullscreen" ></iframe>
                             </div>
                             <!-- <iframe src="https://www.youtube.com/embed/qJHYtn4xu28" allow="fullscreen" ></iframe> -->
                         </div>
@@ -186,7 +187,7 @@
                                 <p id="titre" >Discovery user day</p>
                             </div>
                             <div class="video" *ngIf="!isVideoWeb">
-                                <iframe src="https://www.youtube.com/embed/lemVkz-d_iA" allow="fullscreen" ></iframe>
+                                <iframe src="https://www.youtube.com/embed/lemVkz-d_iA?controls=0" allow="fullscreen" ></iframe>
                             </div>
                             <!-- <iframe src="https://www.youtube.com/embed/lemVkz-d_iA" allow="fullscreen" ></iframe>     -->
                         </div>
@@ -199,7 +200,7 @@
                                 <p id="titre" style="margin-top: 70px;">Honoris Alumni </p>
                             </div>
                             <div class="video" *ngIf="!isVideoWeb">
-                                <iframe src="https://www.youtube.com/embed/J9MV7mgelBU" allow="fullscreen" ></iframe>
+                                <iframe src="https://www.youtube.com/embed/J9MV7mgelBU?controls=0" allow="fullscreen" ></iframe>
                             </div>
                         </div>
                 </div>
@@ -211,7 +212,7 @@
                                 <p id="titre" >Women Board</p>
                             </div>
                             <div class="video" *ngIf="!isVideoWeb">
-                                <iframe src="https://www.youtube.com/embed/M0UAC4lZi7U" allow="fullscreen" ></iframe>
+                                <iframe src="https://www.youtube.com/embed/M0UAC4lZi7U?controls=0" allow="fullscreen" ></iframe>
                             </div>
                         </div>
                 </div>
@@ -223,7 +224,7 @@
                                 <p id="titre">Total energie Libye</p>
                             </div>
                             <div class="video" *ngIf="!isVideoWeb">
-                                <iframe src="https://www.youtube.com/embed/XYq-z6HPWwc" allow="fullscreen" ></iframe>
+                                <iframe src="https://www.youtube.com/embed/XYq-z6HPWwc?controls=0" allow="fullscreen" ></iframe>
                             </div>
 
 
@@ -237,7 +238,7 @@
                                 <p id="titre">Université centrale <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; polytech</p>
                             </div>
                             <div class="video" *ngIf="!isVideoWeb">
-                                <iframe src="https://www.youtube.com/embed/2f2e3iNKvoo" allow="fullscreen" ></iframe>
+                                <iframe src="https://www.youtube.com/embed/2f2e3iNKvoo?controls=0" allow="fullscreen" ></iframe>
                             </div>
 
                         </div>
